--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Regis RPG
-application.vendor=Dalen
+application.title=Regis_RPG
+application.vendor=Regis
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=
 # This directory is removed when the project is cleaned:
@@ -31,7 +31,8 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=true
-javac.classpath=
+javac.classpath=\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=main.RegisRPG
+main.class=main.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
